index.html products-hovers made, other pages initialized

--- a/checkout.html
+++ b/checkout.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +11,6 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
 </head>
-
 <body>
     <header class="header">
         <div class="header__top">
@@ -54,7 +52,7 @@
                 </form>
             </div>
             <div class="header__top__right_block">
-                <a href="shopping_cart.html" class="header__chart">
+                <a href="#" class="header__chart">
                     <img src="./img/chart.png" alt="" class="header__chart__logo">
                 </a>
                 <button class="header__account-button">
@@ -313,105 +311,13 @@
             <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">NEW ARRIVALS</a></li>
         </ul>
     </section>
-    <div class="product">
-        <div class="product-slide">
-            <a href="" class="product-slide__slider">❮</a>
-            <img src="./img/single_product_photo.png" alt="" class="product_slide__product">
-            <a href="" class="product-slide__slider">❯</a>
-        </div>
-        <section class="product-card">
-            <h2 class="product-group">WOMEN COLLECTION</h2>
-            <hr>
-            <h3 class="product-title">Moschino Cheap And Chic</h3>
-            <p class="product-description">Compellingly actualize fully researched processes before proactive
-                outsourcing. Progressively syndicate collaborative
-                architectures before cutting-edge services. Completely visualize parallel core competencies rather than
-                exceptional
-                portals.</p>
-            <div class="product-features">
-                <p class="product-material">MATERIAL: <span>COTTON</span></p>
-                <p class="product-designer">DESIGNER: <span>BINBURHAN</span></p>
-            </div>
-            <p class="product-price">$561</p>
-            <hr>
-            <form action="submit" class="product-metrics">
-                <div class="product-metrics__box">
-                    <div>
-                    <form class="product-metrics__block">
-                        <label for="product-color" class="product-metrics__title">CHOOSE COLOR</label>
-                        <select id="product-color" name="color" class="product-metrics__select">
-                            <option value="red">Red</option>
-                            <option value="green">Green</option>
-                            <option value="black">Black</option>
-                            <option value="white">White</option>
-                            <option value="yellow">Yellow</option>
-                        </select>
-                    </form>
-                    </div>
-                    <form class="product-metrics__block">
-                        <label for="product-size" class="product-metrics__title">CHOOSE SIZE</label>
-                        <select id="product-size" name="size" class="product-metrics__select">
-                            <option value="XXL">XXL</option>
-                            <option value="XL">XL</option>
-                            <option value="L">L</option>
-                            <option value="M">M</option>
-                            <option value="S">S</option>
-                        </select>
-                    </form>
-                    <div class="product-metrics__block">
-                        <p class="product-metrics__title">QUANTITY</p>
-                        <input type="number" name="quantity" id="" class="product-metrics__select" min="1" value="1">
-                    </div>
-                </div>
-
-                <button type="submit" class="product-metrics__button">
-                    <img src="./img/chart.png" alt="">
-                    <div class="product-metrics__button-text">Add to Cart</div>                   
-                </button>
-            </form>
-        </section>
-    </div>
-    <section class="promo">
-        <h2 class="promo__title">you may like also</h2>
-        <div class="promo__products-box">
-            <article class="promo__product">
-                <a href="#" class="promo__product-link">
-                    <div class="promo__photo-box">
-                        <img src="./img/single_photo_promo1.png" alt="" class="promo__product-photo">
-                    </div>
-                    <h3 class="promo__product-name">BLAZE LEGGINGS</h3>
-                    <p class="promo__product-price">$52</p>
-                </a>
-            </article>
-            <article class="promo__product">
-                <a href="#" class="promo__product-link">
-                    <div class="promo__photo-box">
-                        <img src="./img/single_photo_promo2.png" alt="" class="promo__product-photo">
-                    </div>
-                    <h3 class="promo__product-name">ALEXA SWEATER</h3>
-                    <p class="promo__product-price">$52</p>
-                </a>
-            </article>
-            <article class="promo__product">
-                <a href="#" class="promo__product-link">
-                    <div class="promo__photo-box">
-                        <img src="./img/single_photo_promo3.png" alt="" class="promo__product-photo">
-                    </div>
-                    <h3 class="promo__product-name">AGNES TOP</h3>
-                    <p class="promo__product-price">$52</p>
-                </a>
-            </article>
-            <article class="promo__product">
-                <a href="#" class="promo__product-link">
-                    <div class="promo__photo-box">
-                        <img src="./img/single_photo_promo4.png" alt="" class="promo__product-photo">
-                    </div>
-                    <h3 class="promo__product-name">SYLVA SWEATER</h3>
-                    <p class="promo__product-price">$52</p>
-                </a>
-            </article>
-        </div>
-
+    <section class="checkout">
+        <details class="checkout__option checkout__option_1"></details>
+        <details class="checkout__option checkout__option_2"></details>
+        <details class="checkout__option checkout__option_3"></details>
+        <details class="checkout__option checkout__option_4"></details>
+        <details class="checkout__option checkout__option_5"></details>
+        <details class="checkout__option checkout__option_6"></details>
     </section>
     <div class="subscriber">
         <div class="subscriber__teaser">
@@ -438,7 +344,7 @@
         <div class="footer__menu">
             <div class="footer__menu__logo_container footer__menu__grid_element_1">
                 <div class="header__logo">
-                    <a href="index.html"><img src="./img/main_logo.png" alt=""></a>
+                    <a href="#top"><img src="./img/main_logo.png" alt=""></a>
                 </div>
                 <div class="header__slogan">
                     BRAN<span>D</span>
@@ -467,7 +373,7 @@
             </p>
             <p class="footer__menu__sections footer__menu__grid_element_3">COMPANY</p>
             <p class="footer__menu__links footer__menu__grid_element_4">
-                <a href="index.html" class="footer__menu__link">Home</a>
+                <a href="#top" class="footer__menu__link">Home</a>
                 <a href="" class="footer__menu__link">Shop</a>
                 <a href="" class="footer__menu__link">About</a>
                 <a href="" class="footer__menu__link">How It Works</a>
@@ -503,7 +409,6 @@
                         alt=""></a>
             </div>
         </div>
-    </footer>
+    </footer>  
 </body>
-
 </html>
