--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header__top">
             <div class="header__top__left_block">
                 <div class="header__logo">
-                    <img src="./img/main_logo.png" alt="">
+                    <a href="index.html"><img src="./img/main_logo.png" alt=""></a>
                 </div>
                 <div class="header__slogan">
                     BRAN<span>D</span>
@@ -54,7 +54,7 @@
                 </form>
             </div>
             <div class="header__top__right_block">
-                <a href="#" class="header__chart">
+                <a href="shopping_cart.html" class="header__chart">
                     <img src="./img/chart.png" alt="" class="header__chart__logo">
                 </a>
                 <button class="header__account-button">
@@ -317,51 +317,57 @@
         </div>
     </div>
     <div class="categories">
-        <article class="categories__banner__1">
-
-            <img src="./img/banner1.png" alt="">
-            <div class="categories__banner__description">
-                <h4 class="categories__banner__title">
-                    HOT DEAL
-                </h4>
-                <h3 class="categories__banner__category">
-                    FOR MEN
-                </h3>
-            </div>
+        <article class="categories__banner categories__banner__1">
+            <a class="products__product-link" href="single_page.html">
+                <img src="./img/banner1.png" alt="">
+                <div class="categories__banner__description">
+                    <h4 class="categories__banner__title">
+                        HOT DEAL
+                    </h4>
+                    <h3 class="categories__banner__category">
+                        FOR MEN
+                    </h3>
+                </div>
+            </a>
         </article>
-        <article class="categories__banner__2">
-            <img src="./img/banner2.png" alt="">
-            <div class="categories__banner__description">
-                <h4 class="categories__banner__title">
-                    LUXIROUS & TRENDY
-                </h4>
-                <h3 class="categories__banner__category">
-                    ACCESORIES
-                </h3>
-            </div>
+        <article class="categories__banner categories__banner__2">
+            <a class="products__product-link" href="single_page.html">
+                <img src="./img/banner2.png" alt="">
+                <div class="categories__banner__description">
+                    <h4 class="categories__banner__title">
+                        HOT DEAL
+                    </h4>
+                    <h3 class="categories__banner__category">
+                        FOR MEN
+                    </h3>
+                </div>
+            </a>
         </article>
-        <article class="categories__banner__3">
-            <img src="./img/banner3.png" alt="">
-            <div class="categories__banner__description">
-                <h4 class="categories__banner__title">
-                    30% OFFER
-                </h4>
-                <h3 class="categories__banner__category">
-                    WOMEN
-                </h3>
-            </div>
+        <article class="categories__banner categories__banner__3">
+            <a class="products__product-link" href="single_page.html">
+                <img src="./img/banner3.png" alt="">
+                <div class="categories__banner__description">
+                    <h4 class="categories__banner__title">
+                        HOT DEAL
+                    </h4>
+                    <h3 class="categories__banner__category">
+                        FOR MEN
+                    </h3>
+                </div>
+            </a>
         </article>
-        <article class="categories__banner__4">
-            <img src="./img/banner4.png" alt="">
-            <div class="categories__banner__description">
-
-                <h4 class="categories__banner__title">
-                    NEW ARRIVALS
-                </h4>
-                <h3 class="categories__banner__category">
-                    FOR KIDS
-                </h3>
-            </div>
+        <article class="categories__banner categories__banner__4">
+            <a class="products__product-link" href="single_page.html">
+                <img src="./img/banner4.png" alt="">
+                <div class="categories__banner__description">
+                    <h4 class="categories__banner__title">
+                        HOT DEAL
+                    </h4>
+                    <h3 class="categories__banner__category">
+                        FOR MEN
+                    </h3>
+                </div>
+            </a>
         </article>
     </div>
     <section class="products">
@@ -369,66 +375,118 @@
         <p class="products__slogan">Shop for items based on what we featured in this week</p>
         <div class="products__container">
             <article class="products__product">
-                <a href="single_page.html"><img class="products__product__photo" src="./img/product1.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo" src="./img/product1.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </article>
             <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product2.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo" src="./img/product2.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </article>
             <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product3.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo" src="./img/product3.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </article>
             <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product4.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo" src="./img/product4.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </article>
             <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product5.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo" src="./img/product5.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </article>
             <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product6.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo" src="./img/product6.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </article>
             <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product7.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo" src="./img/product7.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </article>
             <article class="products__product">
-                <a href="#"><img class="products__product__photo" src="./img/product8.png" alt=""></a>
-                <a href="#" class="products__product__title">
-                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                <a class="products__product-link" href="single_page.html">
+                    <img class="products__product__photo" src="./img/product8.png" alt="">
+                    <h3 class="products__product__title">MANGO PEOPLE T-SHIRT</h3>
+                    <p class="products__product__price">$52.00</p>
                 </a>
-                <a href="#" class="products__product__price">$52.00</a>
+                <div class="add-box">
+                    <a href="shopping_cart.html" class="add">
+                        <img src="img/cart_add.png" alt="cart" class="cart">
+                        <p class="add-txt">Add to Cart</p>
+                    </a>
+                </div>
             </article>
         </div>
-        <button class="products__catalogue">
-            Browse All Products
+
+        <a href="product.html">
+            <button class="products__catalogue">
+                Browse All Products
             <img src="./img/arrow_right.png" alt="">
-        </button>
+            </button>
+        </a>
+        
 
     </section>
     <div class="feature">
